--- a/src/componet/videoPlayer/replayIconSets.css
+++ b/src/componet/videoPlayer/replayIconSets.css
@@ -40,3 +40,18 @@
     color: white;
     font-size: 15px;
   }
+
+  .animate-slide-in {
+    animation: slideIn 0.5s ease-out forwards;
+  }
+  
+  @keyframes slideIn {
+    0% {
+      transform: translate(-50%, -100%); /* Start above the view */
+      opacity: 0;
+    }
+    100% {
+      transform: translate(-50%, 0); /* Move to its original position */
+      opacity: 1;
+    }
+  }
