--- a/src/componet/videoPlayer/videobuttonSets.css
+++ b/src/componet/videoPlayer/videobuttonSets.css
@@ -60,3 +60,37 @@
 	box-shadow: 0 0 #ab3c3c;
 	top: 6px;
 }
+
+.questionSection{
+	display: flex;
+	background-image: linear-gradient(#000000D8, transparent);
+	flex-direction: column;
+	position: absolute;
+	bottom: 10vh;
+	left: 0;
+	right: 0;
+}
+
+.buttonSection{
+	display: flex;
+	flex-direction: row;
+	justify-content:center;
+	gap: 10%;
+}
+
+/* Animation when the container becomes visible */
+.animate-slide-bottom2Top {
+	animation: slideout 0.5s ease-out forwards;
+	opacity: 1; /* Fade-in */
+  }
+  
+  @keyframes slideout {
+	0% {
+	  transform: translateY(100%); /* Start offscreen (bottom) */
+	  opacity: 0;
+	}
+	100% {
+	  transform: translateY(0); /* End at its original position */
+	  opacity: 1;
+	}
+}
